# ade

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  Dockerfile  PRINCIPLES.md  README.md  compose.yaml  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  tsconfig.scripts.json
.codex/environments/: environment.toml
.github/: dependabot.yml
.github/workflows/: README.md  deployment_pipeline.yml  development_pipeline.yml  engine-development-pipeline.yml  pipeline.yml  platform-development-pipeline.yml  python-development-pipeline.yml  validate.yml
apps/ade-api/: AGENTS.md  Cargo.toml  package.json  tsconfig.json
apps/ade-api/crates/reverse-connect/: Cargo.toml  README.md
apps/ade-api/crates/reverse-connect/src/: connector.rs  main.rs
apps/ade-api/crates/reverse-connect/tests/: connector.rs
apps/ade-api/migrations/: V1__initial_schema.sql  V2__runs.sql  V3__run_log_path.sql
apps/ade-api/sandbox-environment/: README.md  build.ts  tsconfig.json
apps/ade-api/src/: api.rs  api_docs.rs  app.ts  artifacts.rs  azure_auth.rs  config.rs  config.ts  db.rs  ensure-dev-db.ts  error.rs  errors.ts  fastify.d.ts  lib.rs  main.rs  migrate.ts  process.ts  readiness.rs  readiness.ts  router.rs  run_store.rs  runs.rs  runtime.rs  runtime.ts  sandbox_environment.rs  scope.rs  scope_session.rs  server.rs  server.ts  session.rs  session_agent.rs  session_pool.rs  state.rs  terminal.rs
apps/ade-api/src/api/: docs.rs  internal.rs  public.rs  router.rs
apps/ade-api/src/api/internal/: artifacts.rs  reverse_connect.rs  run_bridge.rs  session_agents.rs  terminal_bridge.rs
apps/ade-api/src/api/public/: runs.rs  system.rs  terminal.rs  uploads.rs
apps/ade-api/src/artifacts/: blob.rs  filesystem.rs
apps/ade-api/src/db/: auth.rs  connection.ts  connection_string.rs  migrate-runner.ts  service.ts
apps/ade-api/src/plugins/: database.ts
apps/ade-api/src/routes/: internal_artifacts.rs  internal_run_bridges.rs  internal_terminal_bridges.rs  mod.rs  root.ts  runs.rs  runtime.rs  session.rs  system.rs  terminal.rs  uploads.rs
apps/ade-api/src/runs/: bootstrap.py.tmpl  bootstrap.rs  bridge.rs  events.rs  models.rs  service.rs  store.rs
apps/ade-api/src/runs/service/: execution.rs
apps/ade-api/src/sandbox_environment/: assets.rs  connector.rs  manager.rs  provider.rs
apps/ade-api/src/scope_session/: bundle.rs  rendezvous.rs  service.rs
apps/ade-api/src/session/: client.rs  command.py.tmpl  python.rs  run.py.tmpl  service.rs
apps/ade-api/src/session_agent/: launch.rs  protocol.rs  rendezvous.rs  service.rs
apps/ade-api/src/session_pool/: client.rs
apps/ade-api/src/terminal/: bootstrap.py.tmpl  bootstrap.rs  bridge.rs  protocol.rs  service.rs
apps/ade-api/test/: config.test.ts  helper.ts  migrate.test.ts  runtime.test.ts  server.test.ts  tsconfig.json
apps/ade-api/test/db/: connection.test.ts  migrate-runner.test.ts  service.test.ts
apps/ade-api/test/fixtures/web-dist/: index.html
apps/ade-api/test/fixtures/web-dist/assets/: app.js
apps/ade-api/test/routes/: root.test.ts
apps/ade-api/tests/: http_contract.rs  migrations.rs  runtime_contract.rs  session_contract.rs
apps/ade-web/: AGENTS.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/ade-web/src/: App.tsx  index.css  main.tsx
apps/ade-web/src/api/: client.ts  (+4 more)
apps/api/: .dockerignore  Dockerfile  package.json
apps/api/src/: app.ts  config.ts  runtime.ts  server.ts
apps/api/test/: config.test.ts  helper.ts  runtime.test.ts
apps/web/: Dockerfile  nginx.conf  package.json  vite.config.ts
docs/: api-structure-pass.md  correctness-pass.md  developer-commands.md  elimination-pass.md  environment-variables.md  interactive-session-poc.md  python-packages.md  release-deployment.md  runtime-config.md  simplification-pass.md
docs/architecture/: README.md  glossary.md  sandbox-environment.md
infra/: AGENTS.md  README.md  bootstrap.bicep  main.bicep
infra/bootstrap/: README.md
infra/environments/: main.acceptance.bicepparam  main.dev.bicepparam  main.prod.bicepparam
infra/local/: compose.session-pool-emulator.build.yaml  compose.session-pool-emulator.image.yaml  compose.sessionpool.build.yaml  compose.sessionpool.image.yaml  compose.yaml
infra/local/session-pool-emulator/: Cargo.toml  Dockerfile
infra/local/session-pool-emulator/src/: main.rs
infra/local/sessionpool/: Cargo.toml  Dockerfile  azure-shell-baseline.json  server.py
infra/modules/: container-app-job.bicep  container-app-platform.bicep  container-app.bicep  network.bicep  session-pool.bicep  sql-database.bicep  storage-account.bicep
python/ade-engine/: pyproject.toml
scripts/: acceptance.mjs  acceptance.ts  build-artifacts.mjs  build-artifacts.ts  build-sandbox-environment.ts  build.mjs  build.ts  clean.mjs  clean.ts  create-candidate-tag.mjs  create-release-tag.mjs  deploy-aca.mjs  dev.mjs  dev.ts  export-candidate-images.mjs  generate-web-api.ts  git-tags.mjs  http-checks.mjs  load-candidate-images.mjs  local-deps.mjs  local-deps.ts  package-session-bundle.ts  prepare-acceptance-fixtures.ts  publish-candidate.mjs  resolve-candidate-tag.mjs  resolve-latest-release.mjs  runtime-smoke.ts  session-pool-parity.ts  session-smoke.ts  shared.mjs  smoke-start.mjs  start.mjs  start.ts  test-fast.mjs  test-smoke.mjs  test.mjs
scripts/engine-release/: prepare_snapshot.py
scripts/engine-release/tests/: test_prepare_snapshot.py
scripts/lib/: acceptance-checks.ts  ade-api-binaries.ts  args.ts  blob-env.ts  browser.ts  dev-config.ts  env-files.ts  github.ts  http-checks.ts  local-config-mounts.ts  local-runtime.ts  runtime.ts  session-pool-env.ts  shell.ts  start.ts
scripts/poc/: interactive_exec_poc.py
scripts/python-release/tests/: test_prepare_snapshot.py
scripts/test/: args.test.ts  command-surface.test.ts  env.test.ts  sandbox-environment.test.ts  shell.test.ts  start.test.ts  workflow.test.ts
tests/acceptance/: api.spec.ts  run.spec.ts  support.ts  terminal.spec.ts
(+18 files in other folders)
