[package]
name = "ade-api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["multipart"] }
azure_core = { version = "0.33.0", features = ["tokio"] }
azure_identity = { version = "0.33.0", features = ["tokio"] }
bb8 = "0.9.0"
bb8-tiberius = { version = "0.16.0", default-features = false, features = ["tds73", "tls", "with-tokio"] }
clap = { version = "4.5.48", features = ["derive"] }
hex = "0.4.3"
hmac = "0.12.1"
native-tls = { version = "0.2.18", features = ["vendored"] }
refinery = { version = "0.9.0", features = ["tiberius"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tiberius = { version = "0.12.3", default-features = false, features = ["rustls", "tds73", "tokio", "tokio-util"] }
tokio = { version = "1.47.1", features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.16", features = ["compat"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "normalize-path", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[lib]
name = "ade_api"
path = "src/lib.rs"

[[bin]]
name = "ade-api"
path = "src/main.rs"

[[bin]]
name = "ade-migrate"
path = "src/bin/migrate.rs"
