[package]
name = "ade-api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["multipart", "ws"] }
azure_core = { version = "0.33.0", features = ["tokio"] }
azure_identity = { version = "0.33.0", features = ["tokio"] }
base64 = "0.22.1"
bb8 = "0.9.0"
bb8-tiberius = { version = "0.16.0", default-features = false, features = ["tds73", "tls", "with-tokio"] }
clap = { version = "4.5.48", features = ["derive"] }
flate2 = "1.1.5"
futures-util = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
httpdate = "1.0.3"
mime_guess = "2.0.5"
native-tls = { version = "0.2.18", features = ["vendored"] }
quick-xml = { version = "0.38.3", features = ["serialize"] }
refinery = { version = "0.9.0", features = ["tiberius"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
reverse-connect = { path = "../../packages/reverse-connect" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tar = "0.4.44"
thiserror = "2.0.17"
tiberius = { version = "0.12.3", default-features = false, features = ["rustls", "tds73", "tokio", "tokio-util"] }
time = { version = "0.3.44", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.47.1", features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tokio-util = { version = "0.7.16", features = ["compat", "io"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "normalize-path", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
utoipa = "5.4.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

[lib]
name = "ade_api"
path = "src/lib.rs"

[[bin]]
name = "ade-api"
path = "src/main.rs"

[[bin]]
name = "ade-migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "ade-openapi"
path = "src/bin/openapi.rs"
