[package]
name = "session-pool-emulator"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
axum = { version = "0.8.7", features = ["multipart"] }
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
uuid = { version = "1.18.1", features = ["v4"] }
